Fix regression in previous commit
A horizontal scroll bar was shown now...

--- a/global.scss
+++ b/global.scss
@@ -159,5 +159,6 @@ main:not(.home) section.columns {
 @media screen {
   html {
     margin-right: calc(-100vw + 100%);
+    overflow-x: hidden;
   }
 }
